fix: upload form, run on linux and windows